:lipstick: Add theme colors to colors.xml

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,19 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
 
+    <color name="md_red_500">#970606</color>
+    <color name="md_red_700">#770404</color>
+    <color name="md_yellow_A400">#FBC02D</color>
 
+    <color name="md_lime_500">#6D9904</color>
+    <color name="md_lime_700">#587C02</color>
+    <color name="md_amber_A400">#F55E0C</color>
+
+    <color name="md_green_500">#047204</color>
+    <color name="md_green_700">#035203</color>
+    <color name="md_pink_A400">#D32F2F</color>
+
+    <color name="md_blue_500">#070786</color>
+    <color name="md_blue_700">#04045E</color>
+    <color name="md_turquoise_A400">#00796B</color>
 </resources>
