--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,36 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
-
-    <TextView
+    <Button
+            android:text="Blue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
+            android:id="@+id/blue" app:layout_constraintStart_toStartOf="parent"
+            android:textAllCaps="false"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="24dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    <Button
+            android:text="Green"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/green"
+            android:textAllCaps="false"
+            app:layout_constraintStart_toStartOf="@+id/blue" android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/blue"/>
+    <Button
+            android:text="Red"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/red"
+            android:textAllCaps="false"
+            app:layout_constraintStart_toStartOf="@+id/green" android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/green"/>
+    <Button
+            android:text="Lime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/lime"
+            android:textAllCaps="false"
+            app:layout_constraintStart_toStartOf="@+id/red" android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/red"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
