:sparkles: Implement onClick in xml file

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
             android:id="@+id/blue" app:layout_constraintStart_toStartOf="parent"
             android:textAllCaps="false"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="24dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent" android:onClick="onClick"/>
     <Button
             android:text="Green"
             android:layout_width="wrap_content"
@@ -21,7 +21,7 @@
             android:id="@+id/green"
             android:textAllCaps="false"
             app:layout_constraintStart_toStartOf="@+id/blue" android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toTopOf="@+id/blue"/>
+            app:layout_constraintBottom_toTopOf="@+id/blue" android:onClick="onClick"/>
     <Button
             android:text="Red"
             android:layout_width="wrap_content"
@@ -29,7 +29,7 @@
             android:id="@+id/red"
             android:textAllCaps="false"
             app:layout_constraintStart_toStartOf="@+id/green" android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toTopOf="@+id/green"/>
+            app:layout_constraintBottom_toTopOf="@+id/green" android:onClick="onClick"/>
     <Button
             android:text="Lime"
             android:layout_width="wrap_content"
@@ -37,5 +37,5 @@
             android:id="@+id/lime"
             android:textAllCaps="false"
             app:layout_constraintStart_toStartOf="@+id/red" android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toTopOf="@+id/red"/>
+            app:layout_constraintBottom_toTopOf="@+id/red" android:onClick="onClick"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
